spec/error_next_outside_loop.expected
Parse error: spec/error_next_outside_loop.kex:2:1: runtime error: 'next' used outside a loop
