spec/error_next_outside_loop.kex
# `next` outside any loop is a runtime error.
main do
  next
end
